<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassmateActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/classmates_view"
        android:layout_width="396dp"
        android:layout_height="463dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartClicked"
        android:text="Start"
        app:layout_constraintBottom_toTopOf="@+id/classmates_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="18dp"
        android:text="Go back"
        android:onClick="onFinishClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classmates_view" />

    <Spinner
        android:id="@+id/filterSpin"
        android:layout_width="232dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/classmates_view"
        app:layout_constraintVertical_bias="0.648" />

    <Button
        android:id="@+id/button4"
        android:layout_width="167dp"
        android:layout_height="91dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="35dp"
        android:onClick="onSavedClicked"
        android:text="Saved Session"
        app:layout_constraintBottom_toTopOf="@+id/classmates_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startbut"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>