<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64sp"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/courses_row_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:height="32sp"
        android:lineHeight="32sp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@tools:sample/full_names"/>
</FrameLayout>